# adventofcode2022

./: Cargo.toml  test.txt
src/: main.rs  menu.rs
src/audio/: mod.rs
src/day1/: input.txt  mod.rs
src/day10/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
src/files/: mod.rs
